--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -31,8 +31,7 @@
     <string name="menu_invite_contact">"Einladen..."</string>
     <string name="menu_switch_chats">"Chat wechseln"</string>
     <string name="menu_insert_smiley">"Smiley einfügen"</string>
-    <!-- no translation found for menu_plus (5000617247235760106) -->
-    <skip />
+    <string name="menu_plus">"Menü +"</string>
     <string name="default_input_title">"Eingabe"</string>
     <string name="confirm">"Bestätigen"</string>
     <string name="confirm_delete_contact">"Kontakt \"<xliff:g id="USER">%1$s</xliff:g>\" wird gelöscht."</string>
@@ -54,6 +53,14 @@
     <string name="sign_in">"Anmelden"</string>
     <string name="signing_in_to">"Anmeldung bei <xliff:g id="ACCOUNT">%1$s</xliff:g> wird ausgeführt."</string>
     <string name="signing_in_wait">"Anmeldung wird ausgeführt..."</string>
+    <!-- no translation found for bg_data_prompt_title (4861800723853178111) -->
+    <skip />
+    <!-- no translation found for bg_data_prompt_message (2343305645142823544) -->
+    <skip />
+    <!-- no translation found for bg_data_prompt_ok (3443385427882751532) -->
+    <skip />
+    <!-- no translation found for bg_data_prompt_cancel (7206105589826174638) -->
+    <skip />
     <string name="ongoing_conversation">"Derzeit ausgeführte Chats (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
     <string name="online_count">"<xliff:g id="NUMBER">%1$d</xliff:g> online"</string>
     <string name="subscriptions">"Freundschaftseinladungen"</string>
@@ -90,16 +97,14 @@
     <string name="save">"Speichern"</string>
     <string name="chat_with">"Mit <xliff:g id="USER">%1$s</xliff:g> chatten"</string>
     <string name="me">"Eigene"</string>
-    <!-- no translation found for compose_hint (1735533889811320962) -->
-    <skip />
+    <string name="compose_hint">"Zum Erstellen eintippen"</string>
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g> ist online."</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g> ist abwesend."</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g> ist beschäftigt."</string>
     <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g> ist offline."</string>
     <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g> hat Teilnahme begonnen."</string>
     <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g> hat Chat verlassen."</string>
-    <!-- no translation found for time_stamp (8952691401963972802) -->
-    <skip />
+    <string name="time_stamp" format="date">"'Gesendet um '<xliff:g id="HOUR">hh</xliff:g>':'<xliff:g id="MINUTE">mm</xliff:g>' '<xliff:g id="AMPM">a</xliff:g>' am '<xliff:g id="DATE">EEEE</xliff:g>"</string>
     <string name="send">"Senden"</string>
     <string name="msg_sent_failed">"Die Nachricht kann nicht gesendet werden."</string>
     <string name="disconnected_warning">"Verbindung zum Server getrennt. Nachrichten werden gesendet, sobald eine Online-Verbindung besteht."</string>
@@ -109,8 +114,7 @@
     <string name="empty_chat_list">"Keine aktiven Chats"</string>
     <string name="add_contact_title">"Kontakt hinzufügen"</string>
     <string name="input_contact_label">"E-Mail-Adresse der Person, die Sie einladen möchten:"</string>
-    <!-- no translation found for choose_list_label (1430489448508574145) -->
-    <skip />
+    <string name="choose_list_label">"Liste auswählen:"</string>
     <string name="invite_instruction">"Geben Sie einen Namen ein, der aus den Kontakten hinzugefügt werden soll."</string>
     <string name="invite_label">"Einladung senden"</string>
     <string name="setting_title">"Allgemeine Einstellungen"</string>
