--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -22,7 +22,7 @@
     <string name="menu_block_contact">"Bloquear contacto"</string>
     <string name="menu_view_blocked">"Bloqueados"</string>
     <string name="menu_view_accounts">"Lista de cuentas"</string>
-    <string name="menu_settings">"Configuración"</string>
+    <string name="menu_settings">"Ajustes"</string>
     <string name="menu_start_chat">"Iniciar chat"</string>
     <string name="menu_sign_out">"Salir"</string>
     <string name="menu_view_profile">"Ver perfil"</string>
@@ -31,8 +31,7 @@
     <string name="menu_invite_contact">"Invitar…"</string>
     <string name="menu_switch_chats">"Cambiar de chat"</string>
     <string name="menu_insert_smiley">"Insertar emoticono"</string>
-    <!-- no translation found for menu_plus (5000617247235760106) -->
-    <skip />
+    <string name="menu_plus">"MENU+"</string>
     <string name="default_input_title">"Introducción de texto"</string>
     <string name="confirm">"Confirmar"</string>
     <string name="confirm_delete_contact">"El contacto \"<xliff:g id="USER">%1$s</xliff:g>\" se eliminará."</string>
@@ -54,6 +53,14 @@
     <string name="sign_in">"Acceder"</string>
     <string name="signing_in_to">"Accediendo a <xliff:g id="ACCOUNT">%1$s</xliff:g>"</string>
     <string name="signing_in_wait">"Accediendo..."</string>
+    <!-- no translation found for bg_data_prompt_title (4861800723853178111) -->
+    <skip />
+    <!-- no translation found for bg_data_prompt_message (2343305645142823544) -->
+    <skip />
+    <!-- no translation found for bg_data_prompt_ok (3443385427882751532) -->
+    <skip />
+    <!-- no translation found for bg_data_prompt_cancel (7206105589826174638) -->
+    <skip />
     <string name="ongoing_conversation">"Chats en curso (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
     <string name="online_count">"<xliff:g id="NUMBER">%1$d</xliff:g> conectado"</string>
     <string name="subscriptions">"Invitaciones de amigos"</string>
@@ -90,16 +97,14 @@
     <string name="save">"Guardar"</string>
     <string name="chat_with">"Chat con <xliff:g id="USER">%1$s</xliff:g>"</string>
     <string name="me">"Yo"</string>
-    <!-- no translation found for compose_hint (1735533889811320962) -->
-    <skip />
+    <string name="compose_hint">"Escribe el texto aquí"</string>
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g> está conectado"</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g> está ausente"</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g> está ocupado"</string>
     <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g> está desconectado"</string>
     <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g> se ha unido al chat"</string>
     <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g> se ha desconectado"</string>
-    <!-- no translation found for time_stamp (8952691401963972802) -->
-    <skip />
+    <string name="time_stamp" format="date">"'Enviado a las '<xliff:g id="HOUR">hh</xliff:g>':'<xliff:g id="MINUTE">mm</xliff:g>' '<xliff:g id="AMPM">a</xliff:g>' el '<xliff:g id="DATE">EEEE</xliff:g>"</string>
     <string name="send">"Enviar"</string>
     <string name="msg_sent_failed">"No se ha podido enviar el mensaje."</string>
     <string name="disconnected_warning">"Se ha perdido la conexión con el servidor. Los mensajes se enviarán cuando se restablezca la conexión."</string>
@@ -109,8 +114,7 @@
     <string name="empty_chat_list">"No hay ningún chat activo."</string>
     <string name="add_contact_title">"Añadir contacto"</string>
     <string name="input_contact_label">"Dirección de correo electrónico de la persona a la que deseas invitar:"</string>
-    <!-- no translation found for choose_list_label (1430489448508574145) -->
-    <skip />
+    <string name="choose_list_label">"Seleccionar una lista:"</string>
     <string name="invite_instruction">"Escribe el nombre del contacto que quieras añadir."</string>
     <string name="invite_label">"Enviar invitación"</string>
     <string name="setting_title">"Configuración general"</string>
