--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -31,8 +31,7 @@
     <string name="menu_invite_contact">"Zaproś…"</string>
     <string name="menu_switch_chats">"Przełącz czaty"</string>
     <string name="menu_insert_smiley">"Wstaw emotikon"</string>
-    <!-- no translation found for menu_plus (5000617247235760106) -->
-    <skip />
+    <string name="menu_plus">"Menu+"</string>
     <string name="default_input_title">"Katalog wejściowy"</string>
     <string name="confirm">"Potwierdź"</string>
     <string name="confirm_delete_contact">"Kontakt „<xliff:g id="USER">%1$s</xliff:g>” zostanie usunięty."</string>
@@ -54,6 +53,14 @@
     <string name="sign_in">"Zaloguj"</string>
     <string name="signing_in_to">"Logowanie do konta <xliff:g id="ACCOUNT">%1$s</xliff:g>"</string>
     <string name="signing_in_wait">"Trwa logowanie…"</string>
+    <!-- no translation found for bg_data_prompt_title (4861800723853178111) -->
+    <skip />
+    <!-- no translation found for bg_data_prompt_message (2343305645142823544) -->
+    <skip />
+    <!-- no translation found for bg_data_prompt_ok (3443385427882751532) -->
+    <skip />
+    <!-- no translation found for bg_data_prompt_cancel (7206105589826174638) -->
+    <skip />
     <string name="ongoing_conversation">"Aktywne czaty (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
     <string name="online_count">"<xliff:g id="NUMBER">%1$d</xliff:g> online"</string>
     <string name="subscriptions">"Zaproszenia"</string>
@@ -90,16 +97,14 @@
     <string name="save">"Zapisz"</string>
     <string name="chat_with">"Czatuj z użytkownikiem <xliff:g id="USER">%1$s</xliff:g>"</string>
     <string name="me">"Ja"</string>
-    <!-- no translation found for compose_hint (1735533889811320962) -->
-    <skip />
+    <string name="compose_hint">"Wpisz, aby utworzyć"</string>
     <string name="contact_online">"Użytkownik <xliff:g id="USER">%1$s</xliff:g> jest dostępny"</string>
     <string name="contact_away">"Użytkownik <xliff:g id="USER">%1$s</xliff:g> jest niedostępny"</string>
     <string name="contact_busy">"Użytkownik <xliff:g id="USER">%1$s</xliff:g> jest zajęty"</string>
     <string name="contact_offline">"Użytkownik <xliff:g id="USER">%1$s</xliff:g> jest niedostępny"</string>
     <string name="contact_joined">"Użytkownik <xliff:g id="USER">%1$s</xliff:g> dołączył do czatu"</string>
     <string name="contact_left">"Użytkownik <xliff:g id="USER">%1$s</xliff:g> opuścił czat"</string>
-    <!-- no translation found for time_stamp (8952691401963972802) -->
-    <skip />
+    <string name="time_stamp" format="date">"'Wysłane '<xliff:g id="HOUR">hh</xliff:g>':'<xliff:g id="MINUTE">mm</xliff:g><xliff:g id="AMPM">a</xliff:g>' do '<xliff:g id="DATE">EEEE</xliff:g>"</string>
     <string name="send">"Wyślij"</string>
     <string name="msg_sent_failed">"Nie można wysłać wiadomości."</string>
     <string name="disconnected_warning">"Utracono połączenie z serwerem. Wiadomości zostaną wysłane po przejściu w tryb online."</string>
@@ -109,8 +114,7 @@
     <string name="empty_chat_list">"Brak aktywnych czatów."</string>
     <string name="add_contact_title">"Dodaj kontakt"</string>
     <string name="input_contact_label">"Adres e-mail zapraszanej osoby:"</string>
-    <!-- no translation found for choose_list_label (1430489448508574145) -->
-    <skip />
+    <string name="choose_list_label">"Wybierz listę"</string>
     <string name="invite_instruction">"Wpisz imię, aby dodać do Kontaktów."</string>
     <string name="invite_label">"Wyślij zaproszenie"</string>
     <string name="setting_title">"Ustawienia ogólne"</string>
