--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -31,8 +31,7 @@
     <string name="menu_invite_contact">"邀請…"</string>
     <string name="menu_switch_chats">"切換交談"</string>
     <string name="menu_insert_smiley">"插入表情符號"</string>
-    <!-- no translation found for menu_plus (5000617247235760106) -->
-    <skip />
+    <string name="menu_plus">"選單+"</string>
     <string name="default_input_title">"輸入"</string>
     <string name="confirm">"確認"</string>
     <string name="confirm_delete_contact">"「<xliff:g id="USER">%1$s</xliff:g>」會被刪除。"</string>
@@ -54,6 +53,14 @@
     <string name="sign_in">"登入"</string>
     <string name="signing_in_to">"登入 <xliff:g id="ACCOUNT">%1$s</xliff:g>"</string>
     <string name="signing_in_wait">"登入中…"</string>
+    <!-- no translation found for bg_data_prompt_title (4861800723853178111) -->
+    <skip />
+    <!-- no translation found for bg_data_prompt_message (2343305645142823544) -->
+    <skip />
+    <!-- no translation found for bg_data_prompt_ok (3443385427882751532) -->
+    <skip />
+    <!-- no translation found for bg_data_prompt_cancel (7206105589826174638) -->
+    <skip />
     <string name="ongoing_conversation">"進行中的交談 (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
     <string name="online_count">"線上人數 <xliff:g id="NUMBER">%1$d</xliff:g>"</string>
     <string name="subscriptions">"邀請朋友"</string>
@@ -90,16 +97,14 @@
     <string name="save">"儲存"</string>
     <string name="chat_with">"與 <xliff:g id="USER">%1$s</xliff:g> 交談"</string>
     <string name="me">"我"</string>
-    <!-- no translation found for compose_hint (1735533889811320962) -->
-    <skip />
+    <string name="compose_hint">"輸入文字開始撰寫"</string>
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g> 在線上"</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g> 顯示離開"</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g> 目前忙碌"</string>
     <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g> 顯示離線"</string>
     <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g> 加入交談"</string>
     <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g> 已離開"</string>
-    <!-- no translation found for time_stamp (8952691401963972802) -->
-    <skip />
+    <string name="time_stamp" format="date">"'傳送時間：'<xliff:g id="HOUR">hh</xliff:g>':'<xliff:g id="MINUTE">mm</xliff:g>' '<xliff:g id="AMPM">a</xliff:g>'，'<xliff:g id="DATE">EEEE</xliff:g>"</string>
     <string name="send">"傳送"</string>
     <string name="msg_sent_failed">"訊息無法傳送。"</string>
     <string name="disconnected_warning">"與伺服器連線中斷。您的訊息將在下次登入時傳送。"</string>
@@ -109,8 +114,7 @@
     <string name="empty_chat_list">"沒有交談"</string>
     <string name="add_contact_title">"新增連絡人"</string>
     <string name="input_contact_label">"您要邀請的對象電子郵件地址："</string>
-    <!-- no translation found for choose_list_label (1430489448508574145) -->
-    <skip />
+    <string name="choose_list_label">"選擇一個清單："</string>
     <string name="invite_instruction">"輸入連絡人姓名。"</string>
     <string name="invite_label">"傳送邀請"</string>
     <string name="setting_title">"一般設定"</string>
